--- a/config.toml
+++ b/config.toml
@@ -4,6 +4,12 @@ theme = "tokyonight_storm"
 rulers = [80, 120]
 bufferline = "multiple"
 
+[editor.whitespace.render]
+tabpad = "all"
+
+[editor.indent-guides]
+render = true
+
 [editor.cursor-shape]
 insert = "bar"
 normal = "block"
